changed contact form and about page layout

--- a/_includes/formspree.html
+++ b/_includes/formspree.html
@@ -1,4 +1,4 @@
-<form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/{{ formspree_id }}" method="post">
+<p><form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/{{ formspree_id }}" method="post">
   <fieldset id="fs-frm-inputs">
     <label for="full-name">Votre Nom</label>
     <input type="text" name="name" id="full-name" placeholder="Nom et Prénom" required="">
@@ -9,7 +9,7 @@
     <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
   </fieldset>
   <input type="submit" value="Envoyer">
-</form><style>/* reset */
+</form></p><style>/* reset */
 #fs-frm input,
 #fs-frm select,
 #fs-frm textarea,
