added a blog page, modified the category layout to support blog posts, added a draft blog post, blog posts must be tagged with -blog-

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -13,6 +13,8 @@ layout: default
     {% assign posts = paginator.posts %}
   {% elsif page.category %}
     {% assign posts = site.categories[page.category] %}
+  {% elsif page.blog %}
+    {% assign posts = site.tags.blog %}
   {% else %}
     {% assign posts = site.posts %}
   {% endif %}
