moved start page layout to start.html layout file, removed dates from categories list layout

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -27,7 +27,9 @@ layout: default
       {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
       {%- for post in posts -%}
       <li>
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
+        {%- if page.blog -%}
+          <span class="post-meta">{{ post.date | date: date_format }}</span>
+        {%- endif -%}
         <h3>
           <a class="post-link" href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
