--- a/_layouts/start.html
+++ b/_layouts/start.html
@@ -9,6 +9,93 @@
 
     {{ content }}
 
+    <style type="text/css" media="screen">
+      .start-page .switch {
+        width: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        font-size: 16;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+      }
+      .start-page .switch .switch-link .bg:hover {
+        -webkit-filter: grayscale(0%) brightness(90%) contrast(100%);
+        filter: grayscale(0%) brightness(90%) contrast(100%);
+        -webkit-transition: -webkit-filter .25s ease-in-out;
+        transition: -webkit-filter .25s ease-in-out;
+        -o-transition: filter .25s ease-in-out;
+        transition: filter .25s ease-in-out;
+        transition: filter .25s ease-in-out,-webkit-filter .25s ease-in-out;
+      }
+      .start-page .switch .switch-link .bg {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        -webkit-filter: grayscale(100%) brightness(70%) contrast(120%);
+        filter: grayscale(100%) brightness(70%) contrast(120%);
+        -webkit-transition: -webkit-filter .25s ease-in-out;
+        transition: -webkit-filter .25s ease-in-out;
+        -o-transition: filter .25s ease-in-out;
+        transition: filter .25s ease-in-out;
+        transition: filter .25s ease-in-out,-webkit-filter .25s ease-in-out;
+      }
+      .start-page .switch .switch-link {
+        display: inline-block;
+        position: relative;
+        overflow: hidden;
+        height: calc(100vh - 80px - 106px);
+        min-height: 520px;
+      }
+      .start-page .switch .switch-link .title {
+        color: #fff;
+        position: absolute;
+        top: 50%;
+        display: block;
+        font-family: Arial-Black,Arial,sans-serif;
+        font-size: 34px;
+        line-height: 1em;
+        letter-spacing: normal;
+        text-align: center;
+        text-transform: uppercase;
+        z-index: 3;
+        width: 100%;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+      }
+    </style>
+      
+    <section class="start-page">
+      <div class="switch links">
+
+      {% for category in site.categories %}
+
+      <style type="text/css" media="screen">
+      .start-page .switch .switch-link.{{ category[0] }} .bg {
+        background: url(../assets/{{ category[0] }}.png) 50% 50% no-repeat;
+        -webkit-background-size: cover;
+        background-size: cover;
+      }
+      .start-page .switch .switch-link.{{ category[0] }} {
+        width: {{ 100.0 | divided_by: site.categories.size }}%;
+      }
+      </style>
+
+      <a class="switch-link {{ category[0] }}" href="{{ site.url }}/{{ category[0] }}">
+        <div class="bg"></div>
+        <span class="title">
+          {{ category[0] }}
+        </span>
+      </a>
+
+      {% endfor %}
+
+      </div>
+    </section>
+
     {%- include footer.html -%}
 
   </body>
