fixed hover event not applying on front-page titles

--- a/_layouts/start.html
+++ b/_layouts/start.html
@@ -63,6 +63,7 @@
         letter-spacing: normal;
         text-align: center;
         text-transform: uppercase;
+        pointer-events: none;
         z-index: 3;
         width: 100%;
         -webkit-transform: translateY(-50%);
