feat: updated drafts, added freelance draft section, updated layouts

--- a/_layouts/start.html
+++ b/_layouts/start.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
-  {%- include head.html -%}
-
-  <body>
-
-    {%- include header.html -%}
+---
+layout: fullwidth
+---
 
     {{ content }}
 
@@ -99,9 +94,3 @@
 
       </div>
     </section>
-
-    {%- include footer.html -%}
-
-  </body>
-
-</html>
